kubernetes/apps/network/pihole/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: network
      sectionName: https
  hostnames:
    - pihole.lab.egenintres.se
  rules:
    - backendRefs:
        - name: pihole-app
          port: 80
